<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_layout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/icon"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:minLines="1"
                        android:maxLines="3"
                        android:layout_marginStart="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/publishername"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:textStyle="bold"
                        android:minLines="1"
                        android:maxLines="3"
                        android:textColor="@color/green"
                        android:layout_marginStart="20dp"
                        app:layout_constraintTop_toBottomOf="@id/name"
                        app:layout_constraintStart_toEndOf="@id/icon"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/version"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder"
                        android:layout_marginStart="20dp"
                        app:layout_constraintStart_toEndOf="@id/icon"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <Button
                    android:id="@+id/btn_install"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/install_on_playstore"
                    android:textColor="@color/white"
                    android:background="@color/green"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="end"/>

                <View
                    android:layout_width = "match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/silverBlue"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder" />

                        <ImageView
                            android:id="@+id/star"
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:src="@android:drawable/star_off"
                            android:layout_marginStart="1dp"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:text="@string/placeholder"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:gravity="end">

                        <TextView
                            android:id="@+id/downloads"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/placeholder"
                            android:layout_gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/downloads"
                            android:layout_gravity="center"
                            android:textSize="10sp"/>

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width = "match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/silverBlue"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder"
                    android:minLines="1"
                    android:maxLines="100"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:elevation="4dp"
        android:src="@android:drawable/ic_input_add"
        android:backgroundTint="@color/colorAccent"
        android:layout_gravity="end|bottom"
        android:layout_margin="10dp"/>
</FrameLayout>